# txt-history

./: .gitignore  .windsurfrules  ARCHITECTURE_IMPROVEMENTS.md  BUG_FIX_VERIFIED.md  CODE_QUALITY_STANDARDS.md  CODE_QUALITY_SUMMARY.md  COMPLETE_VERIFICATION_SUMMARY.md  DEPENDENCY_ISSUE_RESOLUTION.md  END_TO_END_VERIFICATION.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_AND_FIXES_SUMMARY.md  QUALITY_IMPLEMENTATION_SUMMARY.md  QUICK_START_QUALITY.md  README.md  app.py  devfile.yaml  environment.yml  format_txt_history_full.py  format_txt_history_full.py.bak  format_txt_history_full.py.new  package-lock.json  pyproject.toml  test_contacts.json  test_messages.db  troubleshooting_guide.md  txt-history.code-workspace
.github/workflows/: rust-quality.yml
data/: messages.db
scripts/: .ruff.toml  .sonarqube.toml  FINAL_SUMMARY.md  SISTER_SETUP.md  SQLiteContactStore.py  __init__.py  add_phone_to_karly.py  constants.py  contacts.db  contacts.db.backup  contacts.json  create_gui_only_app.py  create_mac_app.py  create_mac_app_bundle.py  create_mac_app_final.py  create_simple_mac_app.py  create_zero_command_app.py  dev.sh  final_test.py  format_new.py  format_txts.py  get_dois.py  imessage_db_reader.py  imessage_gui.py  migrate_contacts_db.py  migrate_contacts_json_to_sqlite.py  package_app.py  practise_test copy.py  practise_test.py  practise_test.test.py  simple_test.py  sister_setup_complete.py  test_gui_components.py  test_suite.py  test_suite_fixed.py  utils.py
templates/: index.html
tests/: test_app.py  test_format_txt_history.py  test_practise.py
tests/integration/: test_format_txt_history.py  test_format_txts.py  test_format_txts_e2e.py
tests/scripts/: mock_test.py  test_format_txts.py
tests/unit/: __init__.py  test_constants.py  test_format_new.py  test_format_txt_history.py  test_format_txt_history_unit.py  test_utils.py
txtHistoryRust/: .clippy.toml  .rustfmt.toml  API_FIXES_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  ARCHITECTURE_PROGRESS.md  BUG_FIX_SUMMARY.md  CODE_REVIEW_ISSUES.md  Cargo.toml  EDITION_2024.md  IDIOMATIC_RUST_EVALUATION.md  IMESSAGE_DATABASE_USAGE.md  IMESSAGE_EXPORTER_VS_IMESSAGE_DATABASE.md  IMPROVEMENTS_SUMMARY.md  MESSAGE_FETCHING_FLOW.md  MULTI_CHAT_COLLECTION.md  PYTHON_PARITY_SUMMARY.md  README.md  VERIFICATION_COMPLETE.md  clippy.toml
txtHistoryRust/.cargo/: config.toml
txtHistoryRust/config/: default.yaml
txtHistoryRust/migrations/2025-03-15-000000_create_tables/: down.sql  up.sql
txtHistoryRust/migrations/2025-03-15-000001_add_processed_messages/: down.sql  up.sql
txtHistoryRust/migrations/2025-03-19-000000_enhance_contact_linking/: down.sql  up.sql
txtHistoryRust/migrations/2025-03-20-000000_add_composite_indexes/: down.sql  up.sql
txtHistoryRust/scripts/: pre-commit.sh
txtHistoryRust/sqlite:/tmp/txt_history_contact_test/: test.db
txtHistoryRust/sqlite:/tmp/txt_history_db_test/: test.db
txtHistoryRust/sqlite:/tmp/txt_history_export_test/: export_test.db
txtHistoryRust/sqlite:/tmp/txt_history_test/: test.db
txtHistoryRust/sqlite:data/: messages.db
txtHistoryRust/src/: cache.rs  config.rs  db.rs  error.rs  file_writer.rs  lib.rs  logging.rs  main.rs  metrics.rs  models.rs  nlp.rs  repository.rs  schema.rs  service.rs  utils.rs  validation.rs
txtHistoryRust/tests/: config_test.rs  contact_management_test.rs  database_test.rs  export_test.rs  metrics_test.rs  nlp_test.rs  validation_test.rs
