[package]
name = "txt-history-rust"
version = "0.1.0"
edition = "2021"
authors = ["Jessica Johnson"]
description = "A Rust implementation of the txt-history message processor using imessage_database"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/txt-history-rust"
readme = "README.md"
keywords = ["imessage", "sms", "messages", "export", "nlp"]
categories = ["command-line-utilities", "database"]

[dependencies]
anyhow = "1.0"  # Error handling
chrono = { version = "0.4", features = ["serde"] } # Date and time handling
clap = { version = "4.5", features = ["derive"] } # Command-line argument parsing
csv = "1.3" # CSV file handling
rusqlite = { version = "0.37", features = ["chrono", "bundled"] } # SQLite database access
imessage-database = "3.1.0" # iMessage database access
regex = "1.11"  # Regular expressions
# rust-stemmers = "1.2.0" # Text stemming for NLP - TEMP DISABLED
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0"  # JSON serialization/deserialization
# stop-words = "0.8"  # Stop words for NLP - TEMP DISABLED
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros"] } # Async runtime - minimal features
unicode-normalization = "0.1" # Unicode normalization
async-trait = "0.1" # Async traits
# bincode = "1.3" # Binary serialization - TEMP DISABLED
# rand = "0.8" # Random number generation - TEMP DISABLED
r2d2 = "0.8" # Connection pooling
thiserror = "1.0" # Error definition
tracing = "0.1" # Structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] } # Log formatting
tracing-appender = "0.2" # Log file rotation
# config = "0.14" # Configuration management - TEMP DISABLED
# serde_yaml = "0.9" # YAML configuration support - TEMP DISABLED

# Temporarily disabled due to edition 2024 dependency conflicts
# These can be re-enabled when Rust is upgraded
# rust_tokenizers = "8.1" # Text tokenization for NLP
# whatlang = "0.16" # Language detection
# sled = "0.34" # Embedded database
# metrics = "0.22" # Metrics collection
# diesel = { version = "2.2", features = ["sqlite", "chrono"] } # ORM for SQLite
# rust-bert = { version = "0.21.0", optional = true }

[dev-dependencies]
# Core testing dependencies only
tempfile = "3.0"
pretty_assertions = "1.4"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1

# Linting configuration
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_must_use = "deny"
unreachable_pub = "warn"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"
perf = "warn"
complexity = "warn"
cognitive_complexity = "warn"
cargo = "warn"

# Specific overrides
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
similar_names = "allow"

# Warnings for production code
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "deny"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
