[package]
name = "txt-history-rust"
version = "0.1.0"
edition = "2021"
authors = ["Jessica Johnson"]
description = "A Rust implementation of the txt-history message processor using imessage_database"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rusqlite = { version = "0.37", features = ["chrono", "bundled"] }
imessage-database = "3.1.0"
regex = "1.11"
rust-stemmers = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stop-words = "0.8"
tokio = { version = "1.44", features = ["full"] }
unicode-normalization = "0.1"
whatlang = "0.16"
async-trait = "0.1"
bincode = "1.3"
rand = "0.8"
r2d2 = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
config = "0.14"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
# Only enforce critical safety issues
unwrap_used = "deny"
# The following lints are enforced via CI scripts to allow their use in tests
# expect_used = "deny"
# panic = "deny"
# dbg_macro = "deny"
unimplemented = "deny"
