[package]
name = "txt-history-rust"
version = "0.1.0"  # Consider if you want to increment the version after these updates
edition = "2021"
authors = ["Jessica Johnson"]
description = "A Rust implementation of the txt-history message processor using imessage_database"

[dependencies]
anyhow = "1.0"  # Error handling
chrono = { version = "0.4.31", features = ["serde"] } # Date and time handling
clap = { version = "4.4", features = ["derive"] } # Command-line argument parsing
csv = "1.3" # CSV file handling
rusqlite = { version = "0.33.0", features = ["chrono", "bundled"] } # SQLite database access - match imessage-database
imessage-database = "2.4.0" # iMessage database access
regex = "1.10.2"  # Regular expressions
rust-stemmers = "1.2.0" # Text stemming for NLP
serde = { version = "1.0", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0"  # JSON serialization/deserialization
stop-words = "0.8.1"  # Stop words for NLP
tokio = { version = "1.35", features = ["full"] } # Async runtime
unicode-normalization = "0.1.22" # Unicode normalization
whatlang = "0.16.2" # Language detection
async-trait = "0.1" # Async traits
sled = "0.34.7" # Embedded database
bincode = "1.3.3" # Binary serialization
r2d2 = "0.8.10" # Connection pooling
thiserror = "1.0" # Error definition
rust-bert = { version = "0.21.0", optional = true }  # Keep an eye on rust-bert for new models and features, but it changes more slowly.

[dev-dependencies]
rand = "0.8.5" # Random number generation (test only)

# We're not using r2d2_sqlite directly, but implementing our own connection pooling
# r2d2_sqlite = "0.23.0" # SQLite connection pooling

[features]
default = []
advanced-nlp = ["rust-bert"] # Optional feature for advanced NLP capabilities
